# deye-exporter

./: .gitignore  Dockerfile  Makefile  NOTICE  README.md  config.env.example  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml  release.yaml
grafana/dashboards/: battery.json  bms.json  load.json  overview.json  solar.json  stats.json  temperature.json
src/: metrics.py  plugin.py  prometheus.py  server.py
tests/: test_input.json  test_output.txt  test_plugin.py  test_sensor.py
