[project]
name = "deye-exporter"
version = "0.0.9"
description = "Prometheus Exporter for Deye inverters (deye-inverter-mqtt plugin)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deye_inverter_mqtt"
]

[tool.uv.sources]
deye_inverter_mqtt = { path = "deye-inverter-mqtt" }

[tool.coverage.run]
source = ["src"]

[dependency-groups]
dev = [
    "coverage>=7.14.0",
]
